# sesc

./: .gitignore  Cargo.toml  README.md  auto-enter.ps1  check-modules.ps1  check-window.ps1  inspect.ps1  inspector-after.json  inspector-before.json  kill-sekiro.ps1  launch.ps1  run-peer.cmd  rust-toolchain.toml
crates/sekiro-coop-authority/: Cargo.toml
crates/sekiro-coop-authority/src/: channels.rs  driver.rs  handoff.rs  lib.rs  rng.rs  table.rs
crates/sekiro-coop-authority/tests/: e2e.rs
crates/sekiro-coop-dll/: Cargo.toml
crates/sekiro-coop-dll/src/: hooks.rs  lib.rs  overlay.rs  tick.rs
crates/sekiro-coop-emevd/: Cargo.toml
crates/sekiro-coop-emevd/src/: catalog.rs  format.rs  gen.rs  lib.rs  main.rs  patch.rs
crates/sekiro-coop-net/: Cargo.toml
crates/sekiro-coop-net/src/: desync.rs  grace.rs  lib.rs  lobby.rs  reliability.rs  session.rs  steam.rs  transport.rs  wire.rs
crates/sekiro-coop-net/tests/: property.rs  roundtrip.rs
crates/sekiro-coop-rollback/: Cargo.toml
crates/sekiro-coop-rollback/src/: band.rs  delta.rs  lib.rs  predict.rs  resim.rs  ring.rs  snapshot.rs  stepper.rs
crates/sekiro-sdk-bridge/: Cargo.toml
crates/sekiro-sdk-bridge/src/: ai.rs  combat.rs  events.rs  flag_probe.rs  lib.rs  world.rs
crates/sekiro-sdk-core/: Cargo.toml  build.rs
crates/sekiro-sdk-core/src/: animation.rs  atkparam.rs  characters.rs  debug.rs  debug_patch.rs  entity.rs  enums.rs  hook.rs  items.rs  lib.rs  speffect.rs  tae.rs
crates/sekiro-sdk-sys/: Cargo.toml
crates/sekiro-sdk-sys/src/: aob.rs  ce_table.rs  chrins.rs  chrins_discover.rs  lib.rs  live.rs  memory.rs  natives.rs  offsets.rs  paramrepo.rs  params.rs  version.rs  worldchrman.rs  worldchrman_scan.rs
docs/: GAPS.md  HANDOFF.md  INSTALL.md
tools/aob-scanner/: Cargo.toml
tools/aob-scanner/src/: main.rs
tools/determinism-probe/: Cargo.toml
tools/determinism-probe/src/: main.rs
tools/live-inspector/: Cargo.toml
tools/live-inspector/src/: main.rs
tools/me3/: sekiro-coop.me3
tools/peer-simulator/: Cargo.toml
tools/peer-simulator/src/: main.rs
