[package]
name = "sekiro-coop-rollback"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
sekiro-sdk-sys = { workspace = true }
sekiro-sdk-core = { workspace = true }
sekiro-sdk-bridge = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
