[package]
name = "sekiro-sdk-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
build = "build.rs"

[features]
# Enable the `MinHook.x64.lib` link. Required by the DLL; omit for
# library tests / typecheck runs that don't need real detours.
default = []
minhook = []

[dependencies]
sekiro-sdk-sys = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
] }
