[package]
name = "determinism-probe"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "determinism-probe"
path = "src/main.rs"

[dependencies]
sekiro-sdk-sys = { workspace = true }
sekiro-sdk-core = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
